fix spacing

--- a/src/app/components/todo-input/todo-input.component.css
+++ b/src/app/components/todo-input/todo-input.component.css
@@ -5,7 +5,7 @@ form {
   display: flex;
   align-items: center;
   gap: 1rem;
-  padding: 0.5rem 1rem;
+  padding: 0.8rem 1rem;
   border-radius: 6px;
   overflow: hidden;
 }
